--- a/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -71,7 +71,7 @@
             {
                 "type": "UnityEngine.Polybrush.BrushMirror, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "Brush.MirrorAxis",
-                "value": "{\"m_Value\":0}"
+                "value": "{\"m_Value\":5}"
             },
             {
                 "type": "UnityEngine.Polybrush.MirrorCoordinateSpace, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
@@ -121,7 +121,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"77fa7353e8c92a44981386886de0501b\",\"type\":2},\"prefab\":{\"fileID\":6941765000743290380,\"guid\":\"c60edd51c065ceb46b345849a03bc106\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"77fa7353e8c92a44981386886de0501b\",\"type\":2},\"prefab\":{\"fileID\":4661435515762455780,\"guid\":\"e289bf5debb17f6459818c207d781953\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"77fa7353e8c92a44981386886de0501b\",\"type\":2},\"prefab\":{\"fileID\":2222111361404534124,\"guid\":\"88f2fd29f58b9734683512546acec310\",\"type\":3}}]}}"
             }
         ]
     }
